--- a/web/index.html
+++ b/web/index.html
@@ -69,6 +69,16 @@
   
   
   
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -77,7 +87,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #0000FF;
+      background-color: #000000;
           background-size: 100% 100%;
     }
 
@@ -141,6 +151,10 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
+  
+  
+  
+  
   
   
   
